Release 5.0
	- fix URL munging for direct-download HXL Proxy URLs
	- add hxlinfo command-line script

2023-04-06 Release 4.29
	- remove hxl.input.ExcelInput.info() and make a top-level hxl.input.info() function that works with every data type (also alias to hxl.info())
	- update Makefile for new git branch structure (just dev and prod)

2023-03-20 Release 4.28:
	- update requirements to allow latest versions of dependencies
	- don't fall back to CSV if we have a MIME type or file extension that's not in the allow list (which is fairly liberal)
	- change behaviour of ReplaceDataFilter so that with a map, it stops after the first successful replacement for each value
	- change to ReplaceDataFilter means that replacement maps can now have default values at the end
	- speed up ReplaceDataFilter by precompiling matching column indices for each pattern/replacement
	- simplify Excel handling to remove dependency on mmap and tmpfile
	- add patch from wynnw to fix crash reading some local files
	- fixed issue where libhxl can't read directly from sys.stdin

2022-12-12 Release 4.27.3
	- decreasing log level to reduce the amount of logs generated by the HXL Proxy (in prod)

2022-11-25 Release 4.27.2
	- use structlog module
	- add hxl.util.logup function to include function name in log message
	- switch to logup in input module
	- add extra help text for hxlcount script

2022-09-30 Release 4.27
	- raise a HXLHTMLException (subclass of HXLIOException) when HTML markup found
	- clean dates that are integers, assuming seconds or days since epoch (with cutouts for years and month days)
	- bypass RequestResponseIOWrapper, because it's causing grief; need to make sure content still gets uncompressed
	- fix input options for secondary datasets in scripts (e.g. an appended or joined dataset)
	- more debug logging about HXL hashtag detection
	- add a new logger to hxl.REMOTE_ACCESS specifically for external URL access
	- various command-line script updates and fixes
