@@ -279,9 +279,15 @@ def info(data, input_options=None):
         # See if the first 25 rows are HXLated
         try:
             source = HXLReader(opening_rows)
-            hxl_header_hash = source.columns_hash
+            hxl_headers = [column.header for column in source.columns]
+            hxl_hashtags = [column.display_tag for column in source.columns]
+            hxl_header_hash = hash_row(hxl_headers)
+            hxl_hashtag_hash = source.columns_hash
         except HXLTagsNotFoundException:
+            hxl_headers = None
+            hxl_hashtags = None
             hxl_header_hash = None
+            hxl_hashtag_hash = None
                 
         result["sheets"] = [
             {
@@ -293,6 +299,10 @@ def info(data, input_options=None):
                 "is_hxlated": hxl_header_hash is not None,
                 "header_hash": hash_row(opening_rows[0]) if nrows > 0 else None,
                 "hxl_header_hash": hxl_header_hash,
+                "hxl_hashtag_hash": hxl_hashtag_hash,
+                "headers": opening_rows[0],
+                "hxl_headers": hxl_headers,
+                "hxl_hashtags": hxl_hashtags,
             },
         ]
 
@@ -1206,6 +1216,8 @@ class ExcelInput(AbstractInput):
         for sheet_index in range(0, self._workbook.nsheets):
             sheet = self._get_sheet(sheet_index)
             columns = self._get_columns(sheet)
+            hxl_headers = [column.header for column in columns] if columns else None
+            hxl_hashtags = [column.display_tag for column in columns] if columns else None
             sheet_info = {
                 "name": sheet.name,
                 "is_hidden": (sheet.visibility > 0),
@@ -1214,7 +1226,11 @@ class ExcelInput(AbstractInput):
                 "has_merged_cells": (len(sheet.merged_cells) > 0),
                 "is_hxlated": (columns is not None),
                 "header_hash": hash_row(self._get_row(sheet, 0)) if sheet.nrows > 0 else None,
-                "hxl_header_hash": hxl.model.Column.hash_list(columns) if columns else None,
+                "hxl_header_hash": hash_row(hxl_headers) if hxl_headers else None,
+                "hxl_hashtag_hash": hxl.model.Column.hash_list(columns) if columns else None,
+                "headers": self._get_row(sheet, 0) if sheet.nrows > 0 else None,
+                "hxl_headers": hxl_headers,
+                "hxl_hashtags": hxl_hashtags,
             }
             result.append(sheet_info)
         return result
